[package]
name = "free_async"
version = "0.0.1"
edition = "2021"
authors = ["Pil Eghoff <pil@gmail.com>"]
license = "MIT"
description = "An async runtime built on top of FreeRtos"
homepage = "https://github.com/pileghoff/free_async/"
repository = "https://github.com/pileghoff/free_async/"
readme = "readme.md"

[dependencies]
